--- a/harvestchain-frontend/package.json
+++ b/harvestchain-frontend/package.json
@@ -12,10 +12,12 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "ethers": "^5.7.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "tailwindcss": "3.3.1",
+    "web3modal": "^1.9.12"
   }
 }
