--- a/harvestchain-frontend/package.json
+++ b/harvestchain-frontend/package.json
@@ -12,10 +12,12 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "ethers": "^5.7.0",
+    "formik": "^2.2.9",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "web3modal": "^1.9.12"
+    "web3modal": "^1.9.12",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
